// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generateTypeWordGame should return the correct number of questions when data has enough ENGLISH words 1`] = `
{
  "questions": [
    {
      "additionalInfo": {
        "audioUrl": "https://example.com/audio/apple.mp3",
        "examples": [],
        "imgUrl": "https://example.com/images/apple.jpg",
      },
      "answer": [
        "apple",
        "appel",
        "aple",
      ],
      "question": [
        "Round fruit with red or green skin.",
      ],
      "wordId": "1",
    },
    {
      "additionalInfo": {
        "audioUrl": "https://example.com/audio/orange.mp3",
        "examples": [],
        "imgUrl": "https://example.com/images/orange.jpg",
      },
      "answer": [
        "orange",
        "oranj",
        "orenge",
      ],
      "question": [
        "Citrus fruit with [...] rind.",
      ],
      "wordId": "2",
    },
    {
      "additionalInfo": {
        "audioUrl": "https://example.com/audio/banana.mp3",
        "examples": [],
        "imgUrl": "https://example.com/images/banana.jpg",
      },
      "answer": [
        "banana",
      ],
      "question": [
        "Curved fruit with yellow skin.",
      ],
      "wordId": "3",
    },
    {
      "additionalInfo": {
        "audioUrl": "https://example.com/audio/strawberry.mp3",
        "examples": [],
        "imgUrl": "https://example.com/images/strawberry.jpg",
      },
      "answer": [
        "strawberry",
        "strawbery",
        "straw-berry",
      ],
      "question": [
        "Soft red fruit with seeds.",
      ],
      "wordId": "4",
    },
    {
      "additionalInfo": {
        "audioUrl": "https://example.com/audio/pineapple.mp3",
        "examples": [],
        "imgUrl": "https://example.com/images/pineapple.jpg",
      },
      "answer": [
        "pineapple",
      ],
      "question": [
        "Tropical fruit with spiky rind.",
      ],
      "wordId": "5",
    },
    {
      "additionalInfo": {
        "audioUrl": "https://example.com/audio/grape.mp3",
        "examples": [],
        "imgUrl": "https://example.com/images/grape.jpg",
      },
      "answer": [
        "grape",
        "grap",
        "greyp",
      ],
      "question": [
        "Small juicy fruit with smooth skin.",
      ],
      "wordId": "6",
    },
  ],
  "task": "Type a word that means ",
  "type": "TYPE_WORD",
}
`;

exports[`generateTypeWordGame should return the correct number of questions when data has enough SPANISH words 1`] = `
{
  "questions": [
    {
      "additionalInfo": {
        "audioUrl": "https://example.com/audio/manzana.mp3",
        "examples": [
          {
            "text": "Ella comió una manzana roja para el desayuno.",
            "translation": "She ate a red apple for breakfast.",
          },
        ],
        "imgUrl": "https://example.com/images/manzana.jpg",
      },
      "answer": [
        "manzana",
        "manzana",
        "manzána",
      ],
      "question": [
        "Round fruit with red or green skin.",
      ],
      "wordId": "1",
    },
    {
      "additionalInfo": {
        "audioUrl": "https://example.com/audio/naranja.mp3",
        "examples": [
          {
            "text": "Ella bebió jugo de naranja fresco esta mañana.",
            "translation": "She drank fresh orange juice this morning.",
          },
          {
            "text": "Llamaban la naranja “fruta del sol” por su color.",
            "translation": "They called the orange "sun fruit" because of its color.",
          },
        ],
        "imgUrl": "https://example.com/images/naranja.jpg",
      },
      "answer": [
        "naranja",
        "naranga",
        "naranj",
      ],
      "question": [
        "Citrus fruit with orange rind.",
      ],
      "wordId": "2",
    },
    {
      "additionalInfo": {
        "audioUrl": "https://example.com/audio/platano.mp3",
        "examples": [
          {
            "text": "Él peló un plátano y se lo comió.",
            "translation": "He peeled a banana and ate it.",
          },
        ],
        "imgUrl": "https://example.com/images/platano.jpg",
      },
      "answer": [
        "plátano",
        "platáno",
        "plátan",
      ],
      "question": [
        "Curved fruit with yellow skin.",
      ],
      "wordId": "3",
    },
    {
      "additionalInfo": {
        "audioUrl": "https://example.com/audio/fresa.mp3",
        "examples": [
          {
            "text": "Ella recogió una fresa madura del jardín.",
            "translation": "She picked a ripe strawberry from the garden.",
          },
        ],
        "imgUrl": "https://example.com/images/fresa.jpg",
      },
      "answer": [
        "fresa",
        "freza",
        "fre-sá",
      ],
      "question": [
        "Soft red fruit with seeds.",
      ],
      "wordId": "4",
    },
    {
      "additionalInfo": {
        "audioUrl": "https://example.com/audio/pina.mp3",
        "examples": [
          {
            "text": "Hicieron un batido de piña.",
            "translation": "They made a pineapple smoothie.",
          },
        ],
        "imgUrl": "https://example.com/images/pina.jpg",
      },
      "answer": [
        "piña",
        "pina",
        "pi-ñá",
      ],
      "question": [
        "Tropical fruit with spiky rind.",
      ],
      "wordId": "5",
    },
    {
      "additionalInfo": {
        "audioUrl": "https://example.com/audio/uva.mp3",
        "examples": [
          {
            "text": "Él me ofreció un racimo de uvas.",
            "translation": "He offered me a bunch of grapes.",
          },
        ],
        "imgUrl": "https://example.com/images/uva.jpg",
      },
      "answer": [
        "uva",
        "uba",
        "uvá",
      ],
      "question": [
        "Small juicy fruit with smooth skin.",
      ],
      "wordId": "6",
    },
  ],
  "task": "Type a word that means ",
  "type": "TYPE_WORD",
}
`;

exports[`generateTypeWordGame should return the correct number of questions when with minimal ENGLISH words 1`] = `
{
  "questions": [
    {
      "additionalInfo": {
        "audioUrl": "https://example.com/audio/apple.mp3",
        "examples": [],
        "imgUrl": "https://example.com/images/apple.jpg",
      },
      "answer": [
        "apple",
        "appel",
        "aple",
      ],
      "question": [
        "Round fruit with red or green skin.",
      ],
      "wordId": "1",
    },
  ],
  "task": "Type a word that means ",
  "type": "TYPE_WORD",
}
`;

exports[`generateTypeWordGame should return the correct number of questions when with minimal SPANISH words 1`] = `
{
  "questions": [
    {
      "additionalInfo": {
        "audioUrl": "https://example.com/audio/manzana.mp3",
        "examples": [
          {
            "text": "Ella comió una manzana roja para el desayuno.",
            "translation": "She ate a red apple for breakfast.",
          },
        ],
        "imgUrl": "https://example.com/images/manzana.jpg",
      },
      "answer": [
        "manzana",
        "manzana",
        "manzána",
      ],
      "question": [
        "Round fruit with red or green skin.",
      ],
      "wordId": "1",
    },
  ],
  "task": "Type a word that means ",
  "type": "TYPE_WORD",
}
`;
